src/App.scss
$drop-highlight-color: cornflowerblue;
$success-color: rgba(144, 238, 144, 1);
$success-outline: rgba(144, 238, 144, 0.5);
$headerfooter-background-color: whitesmoke;

body {
    min-height: 100vh;
    position: relative;

    &::after {
        content: '';
        display: block;
        height: 4em;
        /* Set same as footer's height */
    }
}

footer {
    position: absolute;
    bottom: 0;
    right: 0;
    text-align: right;
    padding-top: 1em;
    width: 100%;
    height: 60px;
    background-color: $headerfooter-background-color;
}

header nav {
    background-color: $headerfooter-background-color;
}

.navbar-brand {
    white-space: normal;
    text-align: center;
    word-break: break-all;
    font-size: 200%;
    padding-bottom: 0px;
    .brandlogo {
        position: relative;
        top: -5px;
    }
}

.tab-main {
    min-height: 30vh;
}

.tab-pane {
    min-height: 32vh;
    position: relative;
}

.tab-welcome {
    align-items: center;
    --icon-size: 3.5em;
    --icon-size-big: 10em;

    img.icon {
        height: var(--icon-size);
        width: var(--icon-size);
        margin-inline: 0.2em;
    }
    i.tranform-caret-icon {
        color: cornflowerblue;
        font-size: calc(var(--icon-size) * 0.5);
        display: inline-block;
        vertical-align: middle;
    }
    i.drop-cloud-icon {
        font-size: var(--icon-size-big);
        color: cornflowerblue;
        line-height: 1em;
    }
}

.main-content.drop-active {
    background-image: repeating-linear-gradient(
            -60deg,
            $drop-highlight-color,
            $drop-highlight-color 9.3px,
            transparent 30px,
            transparent 39.3px,
            $drop-highlight-color 60px
        ),
        repeating-linear-gradient(
            30deg,
            $drop-highlight-color,
            $drop-highlight-color 9.3px,
            transparent 30px,
            transparent 39.3px,
            $drop-highlight-color 60px
        ),
        repeating-linear-gradient(
            120deg,
            $drop-highlight-color,
            $drop-highlight-color 9.3px,
            transparent 30px,
            transparent 39.3px,
            $drop-highlight-color 60px
        ),
        repeating-linear-gradient(
            210deg,
            $drop-highlight-color,
            $drop-highlight-color 9.3px,
            transparent 30px,
            transparent 39.3px,
            $drop-highlight-color 60px
        );
    background-color: rgba($drop-highlight-color, 0.1);
    background-size: 3px calc(100% + 120px), calc(100% + 120px) 3px,
        3px calc(100% + 120px), calc(100% + 120px) 3px;
    background-position: 0 0, 0 0, 100% 0, 0 100%;
    background-repeat: no-repeat;
    animation: dropActive-borderAnimation 0.8s infinite linear;
    border-radius: 8px;
}

@keyframes dropActive-borderAnimation {
    from {
        background-position: 0 0, -120px 0, 100% -120px, 0 100%;
    }

    to {
        background-position: 0 -120px, 0 0, 100% 0, -120px 100%;
    }
}

@keyframes copysuccess-animation {
    from {
        outline: 0px solid $success-outline;
    }
    30% {
        outline: 6px solid $success-color;
    }
    90% {
        outline: 6px solid $success-color;
    }
    to {
        outline: 0px solid $success-outline;
    }
}

.copy-button {
    position: absolute;
    top: 0;
    right: 0;
    cursor: pointer;
    border-radius: 5px;
    border: 1px lightgray solid;
    margin: 0.5em;
    z-index: 999;

    &.success {
        animation: copysuccess-animation 0.5s 1 ease-in;
        animation-delay: 0s;
        animation-fill-mode: forwards;
        -webkit-animation-fill-mode: forwards;
        outline: 2px solid lightgreen;
        background-color: hsl(120, 73%, 80%);
    }
}

.nav-tabs {
    z-index: 1;
    position: relative;
}

.svg-minimap {
    width: 30%;
    position: absolute;
    right: 0;
    top: 0;
    opacity: 0.3;
    z-index: 998;

    &:hover {
        opacity: 1;
    }
}

.preview-svg {
    overflow: hidden;
}

.preview-pycode,
.preview-pseudocode {
    font-family: 'Courier New', monospace;
    width: 100%;
    border: none;
    white-space: pre;
}

.fileptions {
    display: flex;
    flex-direction: row;

    > small:first-child {
        flex: 1 1;
    }
    > small:last-child {
        flex: 0 1;
    }
}

.example-content-button {
    font-size: 1em;
    margin: 0px;
    padding: 0px;
    margin-left: 0.5em;
    border: 0px;
    outline: 0px;
    vertical-align: unset;
    user-select: none;

    &:focus {
        box-shadow: none;
    }
}

